# joryu

./: .gitmodules  Cargo.toml  README.md  bot.db  saved
.sqlx/: query-14b9c2d243553d1a0bde28a49a3da6d605c6a38dfdbe68e929505e96af47bcbc.json  query-17a9d99eff7fe19a90320cbfdf8f1771f50c8efb09215094bcecbdb48ee74641.json  query-680ad3a07791cd3a4f1c9800180283f19d42fb3163f55772a1f5045c528056bd.json
memes/: gun.mov  majima_monday.mov
memes/memes/: beverageprowler.mov  wearetheyakuza4.mov  whotoldyoutokillher.mov
migrations/: 20250508011850_create_guild_prefixes_table.sql
src/: main.rs
