[package]
name = "joryu"
version = "0.5.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", git = "https://github.com/gentoo-based/serenity-android" }
poise = { version = "0.6.1"}
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
rand = "0.9.1"
regex = "1.11.1"
anyhow = "1.0.98"
chrono = "0.4.41"
#shuttle_runtime = "0.58.3"
#shuttle_serenity = "0.58.3"

[patch.crates-io]
serenity = { git = "https://github.com/gentoo-based/serenity-android" }
